Bot AccessToken으로 분리.

--- a/Views/Member/StartBot.cshtml
+++ b/Views/Member/StartBot.cshtml
@@ -1,9 +1,12 @@
-﻿@{
+﻿
+@{
     ViewData["Title"] = "Index Page";
 }
 
 <div class="text-center">
     <div class="border">
+        <div>
+        </div>
         <div>
            봇 활동 준비중~
         </div>
