Bot Dispose 할때 PingSender도 같이 폐기. (Thread Sleep때문에 Join이 대기상태였다.)

--- a/Views/Member/StartBot.cshtml
+++ b/Views/Member/StartBot.cshtml
@@ -22,10 +22,10 @@
             </div>
         }
         <div>
-            <form method="post" href="/member/startbot">
-                <input name="msg" type="text" />
-                <button type="submit">시작</button>
-            </form>
+            <br>봇 이용방법<br />
+            <p>1.위의 입장 버튼을 누른다.</p>
+            <p>2.트위치 채널창에서 관리자 권한을 준다.</p>
+            <p>/mod jongwoonlee</p>
         </div>
     </div>
 </div>
