--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                         <li>
                             <a class="nav-link text-dark" asp-area="" asp-controller="Member" asp-action="StartBot">Bot</a>
                         </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Member" asp-action="Details">Details</a>
+                        </li>
                     </ul>
                 </div>
             </div>
