금지어 관리 페이지 추가. + ViewDate 변수명 변경

--- a/Views/Member/Details.cshtml
+++ b/Views/Member/Details.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Details Page";
-    var StreamerDetail = (StreamerDetail)ViewData["streamer_detail"];
+    var StreamerDetail = (StreamerDetail)ViewData["StreamerDetail"];
 }
 
 <div class="form-group">
