--- a/Views/Member/StartBot.cshtml
+++ b/Views/Member/StartBot.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Index Page";
-    var Result = (int)ViewData["result"];
+    var Result = (int)ViewData["Result"];
 }
 <div class="text-center">
     <div class="border">
