--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -37,6 +37,9 @@
                         <li>
                             <a class="nav-link text-dark" asp-area="" asp-controller="Member" asp-action="Details">Details</a>
                         </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Member" asp-action="Words">Words</a>
+                        </li>
                     </ul>
                 </div>
             </div>
