명령어 Cooldown 추가.(공통으로 관리되는 명령어)

--- a/Views/Member/Words.cshtml
+++ b/Views/Member/Words.cshtml
@@ -85,6 +85,7 @@
                         case "Delete":
                             break;
                     }
+                    location.reload();
                 }
                 else {
                     alert("fail");
