--- a/Views/Member/Words.cshtml
+++ b/Views/Member/Words.cshtml
@@ -3,9 +3,9 @@
     var ForbiddenWordList = (List<string>)ViewData["ForbiddenWordList"];
 }
 <section class="input-row">
-    <label> 금지어 추가하기 </label> 
+    <label> 금지어 추가하기 </label>
     <input type="text" class="overlapped-by-button">
-    <button class="overlap-input btn-insert">+</button>
+    <button class="overlap-input btn-insert btn">+</button>
 
     <section class="input-row has-multiline-content">
         <label>
@@ -24,7 +24,10 @@
                 {
                     <li class="forbidden-word">
                         @item
-                        <button class="btn-delete">
+                        <button class="btn-update-start">
+                            수정
+                        </button>
+                        <button class="btn-delete btn">
                             삭제
                         </button>
                     </li>
@@ -36,33 +39,34 @@
 </section>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script type="text/javascript">
-    $(document).on("click", "button", function (e) {
+    $(document).on("click", ".btn-update-start", function (e) {
+        var prevWord = e.currentTarget.previousSibling.textContent.trim();
+        var content = document.createElement("div");
+        content.setAttribute("class", "wrap-div");
+        var input = document.createElement("input");
+        var updateButton = document.createElement("button");
+        updateButton.setAttribute("class", "btn-update");
+        updateButton.textContent = "수정";
+        var deleteButton = document.createElement("button");
+        deleteButton.textContent = "X";
+        deleteButton.addEventListener("click" , function() {
+            e.currentTarget.setAttribute("style", "display:inline-block;");
+            e.currentTarget.parentElement.getElementsByClassName("wrap-div")[0].remove();
+        })
+        content.appendChild(input);
+        content.appendChild(updateButton);
+        content.appendChild(deleteButton);
+        e.currentTarget.parentElement.appendChild(content);
+        e.currentTarget.setAttribute("style", "display:none;");
+    })
 
-        var forbiddenWord = "";
-        var todo = "";
-        if (todo == "Update") {
-            var prevWord = "";
+    $(document).on("click", ".btn-update", function (e) {
+        var prevWord = e.currentTarget.parentElement.parentElement.getElementsByClassName("btn-update-start")[0].previousSibling.textContent.trim() || "";
+        var forbiddenWord = e.currentTarget.previousElementSibling.value || "";
+        if (forbiddenWord === "") {
+            return false;
         }
-
-        var btnClassList = e.currentTarget.classList;
-        if (btnClassList.contains("btn-insert")) {
-            console.log("insert");
-            todo = "Insert";
-            forbiddenWord = e.currentTarget.previousElementSibling.value.trim();
-            if (!forbiddenWord) {
-                return;
-            }
-        } else if (btnClassList.contains("btn-update")) {
-            console.log("update");
-            todo = "Update";
-            if (!forbiddenWord) {
-                return;
-            }
-        } else if (btnClassList.contains("btn-delete")) {
-            console.log("delete");
-            todo = "Delete";
-            forbiddenWord = e.currentTarget.previousSibling.textContent.trim();
-        }
+        var todo = "Update";
         // AJAX 통신 : POST
         $.ajax({
             type: "post",
@@ -71,20 +75,62 @@
                 "Content-type": "application/json; charset=utf-8"
             },
             data: JSON.stringify({
-                ForbiddenWord : forbiddenWord,
-                Todo : todo,
-                PrevWord : prevWord
+                ForbiddenWord: forbiddenWord,
+                Todo: todo,
+                PrevWord: prevWord
             }),
             success: function (result) {
                 if (!!result) {
-                    switch (result) {
-                        case "Insert":
-                            break;
-                        case "Update":
-                            break;
-                        case "Delete":
-                            break;
-                    }
+                    location.reload();
+                }
+                else {
+                    alert("fail");
+                }
+            }
+        });
+    });
+
+    $(document).on("click", ".btn-insert", function (e) {
+        var todo = "Insert";
+        forbiddenWord = e.currentTarget.previousElementSibling.value.trim() || "";
+        // AJAX 통신 : POST
+        $.ajax({
+            type: "post",
+            url: "/member/words",
+            headers: {
+                "Content-type": "application/json; charset=utf-8"
+            },
+            data: JSON.stringify({
+                ForbiddenWord: forbiddenWord,
+                Todo: todo
+            }),
+            success: function (result) {
+                if (!!result) {
+                    location.reload();
+                }
+                else {
+                    alert("fail");
+                }
+            }
+        });
+    });
+
+    $(document).on("click", ".btn-delete", function (e) {
+
+        var todo = "Delete";
+        var forbiddenWord = e.currentTarget.previousElementSibling.previousSibling.textContent.trim() || "";
+        $.ajax({
+            type: "post",
+            url: "/member/words",
+            headers: {
+                "Content-type": "application/json; charset=utf-8"
+            },
+            data: JSON.stringify({
+                ForbiddenWord: forbiddenWord,
+                Todo: todo
+            }),
+            success: function (result) {
+                if (!!result) {
                     location.reload();
                 }
                 else {
