누락된 로그인 화면 추가.

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Member" asp-action="Index">Login</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Member" asp-action="Login">Login</a>
                         </li>
                         <li>
                             <a class="nav-link text-dark" asp-area="" asp-controller="Member" asp-action="Logout">Logout</a>
