--- a/Views/Member/Login.cshtml
+++ b/Views/Member/Login.cshtml
@@ -18,3 +18,9 @@
         </div>
     </div>
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script type="text/javascript">
+    $('.btn').click(function () {
+        location.href = "/member/index";
+    })
+</script>
